backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
spec:
  selector:
    app: multitool
  ports:
  - name: for-multitool
    port: 80
